# PikPakAPI

./: README.md  pyproject.toml
app/: __init__.py  deps.py  main.py  schemas.py  store.py
app/routers/: __init__.py  account.py  auth.py  files.py  tasks.py
app/static/: style.css
app/templates/: files.html  login.html
